fix incon overlaping

--- a/scripts/apps/authoring/widgets/widgets-article.scss
+++ b/scripts/apps/authoring/widgets/widgets-article.scss
@@ -115,7 +115,7 @@
             .widget-header__action {
                 position: fixed;
                 top: 106px;
-                right: 61px;
+                right: 92px;
                 z-index: 999;
             }
         }
